--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="root folder/css1/style.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
         <script src="root folder/jsF/myScript.js"></script>
     </head>
     <body>
@@ -157,7 +158,10 @@
                     <div class="footer-col">
                         <h2>Follow US  </h2>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                           <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> --> 
+                           <a href="#"><i data-feather="facebook"></i></a>
+
+
                             <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
