--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                             <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i data-feather="linkedin"></i></a>
                             <p><strong>Canis Bookshop</strong></p>
                              <p>No.1 Palace Street</p>
                               <p>London</p>
