adjusting the feather

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <h2>Follow US  </h2>
                         <div class="social-links">
                            <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> --> 
-                           <a href="#"><i data-feather="facebook"></i></a>
+                           <a class="icon-link" href="#"><i data-feather="facebook"></i></a>
 
 
                             <a href="#"><i class="fab fa-twitter"></i></a>
