--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <h2>Follow US  </h2>
                         <div class="social-links">
                            <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> --> 
-                           <a class="icon-link feather-text-sand" href="#"><i data-feather="facebook"></i></a>
+                           <a class="icon-link feather-text-sand feather-hover-text-sand-amber" href="#"><i data-feather="facebook"></i></a>
 
 
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -178,4 +178,5 @@
         </footer>
     </body>
     <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
+    <script src="root folder/jsF/myScript2.js"></script>
 </html>
