--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="root folder/css1/style.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
         
         <script src="root folder/jsF/myScript.js"></script>
     </head>
@@ -159,7 +160,7 @@
                         <h2>Follow US  </h2>
                         <div class="social-links">
                            <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> --> 
-                           <a class="icon-link feather-text-sand feather-hover-text-sand-amber" href="#"><i data-feather="facebook"></i></a>
+                           <a class="icon-link " href="#"><i data-feather="facebook"></i></a>
 
 
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -177,6 +178,5 @@
             </div>
         </footer>
     </body>
-    <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
     <script src="root folder/jsF/myScript2.js"></script>
 </html>
