undo thefeather and left it in the old version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="root folder/css1/style.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
-        
         <script src="root folder/jsF/myScript.js"></script>
     </head>
     <body>
@@ -159,13 +158,10 @@
                     <div class="footer-col">
                         <h2>Follow US  </h2>
                         <div class="social-links">
-                           <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> --> 
-                           <a class="icon-link " href="#"><i data-feather="facebook"></i></a>
-
-
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="icon-link feather-text-sand" href="#"><i data-feather="instagram"></i></a>
-                            <a href="#"><i data-feather="linkedin"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
                             <p><strong>Canis Bookshop</strong></p>
                              <p>No.1 Palace Street</p>
                               <p>London</p>
@@ -178,5 +174,4 @@
             </div>
         </footer>
     </body>
-    <script src="root folder/jsF/myScript2.js"></script>
 </html>
