added personal information at the footer  , and css style for it

--- a/index.html
+++ b/index.html
@@ -167,8 +167,16 @@
                               <p>London</p>
                                <p>SW1A 1AA</p>
                                 <p>&copy;copyright 2025-2028</p>
+                                <hr>
                         </div>
                         
+                    </div>
+                    <div class ="personal-info">
+                        <p>
+                            Passionate about Software Engineering and always eager to solve real-world challenges with innovative solutions.
+                            Looking for opportunities to grow and contribute to impactful projects. <strong><a class="cta button-style" href="mailto:ouambocanis@gmail.com">Contact Me</a></strong> for collaborations or job offers!
+                          </p>
+                          <a class="cta button-style" href="https://github.com/OuamboC" target="_blank">Explore My Projects on GitHub</a> 
                     </div>
                 </div>
             </div>
